# myalgos

./: .gitignore  CMakeLists.txt  README.md
include/playground/: binarytree.h  example.h
src/: main.cpp
src/algos/: binarytree.cpp
tests/: main_test.cpp
